# cocoindex-code-rs

./: .gitignore  Cargo.toml  INSTALL.md  MCP_SETUP.md  README.md  USAGE_BILINGUAL.md  install.sh
.github/workflows/: cocoindex-code-rs-release.yml
src/: daemon.rs  daemon_client.rs  daemon_protocol.rs  lib.rs  main.rs  project.rs  service.rs
src/config/: mod.rs  project.rs  user.rs
src/indexer/: mod.rs
src/mcp/: mod.rs
src/provider/: mod.rs
src/store/: mod.rs
src/utils/: language.rs  mod.rs  patterns.rs
tests/: integration_tests.rs
