[package]
name = "cocoindex-code-rs"
version = "0.1.15"
edition = "2021"

[lib]
name = "coco_rs"

[dependencies]
# 核心引擎依赖 (本地路径)
cocoindex_ops_text = { path = "../cocoindex/rust/ops_text" }

# 异步与 IO
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 命令行与配置
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenvy = "0.15"

# 数据库 (使用 rusqlite 替代 sqlx)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.7-alpha.10"

# 实用工具
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
md5 = "0.7"
walkdir = "2.5"
globset = "0.4"
dirs = "5.0"
notify = "6.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
